# ClimSim

./: .buildinfo  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CONTRIBUTING.html  CONTRIBUTING.md  ClimSim_metrics.ipynb  LICENSE  README.html  README.md  confirmation_train.txt  data_utils.py  dataset.html  developer_guide.md  environment.yml  evaluating.html  evaluation.html  experimental.md  for_kaggle_users.py  genindex.html  installation.html  intro.html  logs_test.out  logs_train.out  logs_val.out  make_test.py  make_train.py  make_val.py  models.html  objects.inv  plot_R2_analysis.ipynb  quickstart.html  sbatch_test.sh  sbatch_train.sh  sbatch_val.sh  search.html  searchindex.js  setup.py
.github/: deploy-book.yaml
.ipynb_checkpoints/: ClimSim_metrics-checkpoint.ipynb  calc_save_metrics_OLD-checkpoint.ipynb
_sources/: CONTRIBUTING.md  README.md  dataset.md  evaluation.md  intro.md  quickstart.md
_static/: documentation_options.js
baseline_models/HSR/inference/: CMakeLists.txt  build_perlmutter_gnu.sh  build_perlmutter_nvhpc.sh  fortran_inference.f90  inference.py  setup_model.py  test_input.txt  test_output.txt
climsim_utils/: data_utils.py
dataset_statistics/: README.md
demo_notebooks/: cnn_example.html  cnn_example.ipynb  mlp_example.html  mlp_example.ipynb  quickstart_example.html  quickstart_example.ipynb  water_conservation.html  water_conservation.ipynb
deprecated/: make_val_npy.ipynb
downstream_test/: README.md  overview.md
evaluation/: ClimSim_metrics.html  ClimSim_metrics.many-trials.v2.py  bias_calculation.html  bias_calculation.ipynb  climsim_utils  crps_clean.py  crps_correction.html  crps_correction.ipynb  indextolatlons.pkl  main_figure_generation.html  main_figure_generation.ipynb  ne4.area.npy  plot_R2_analysis.html  requirements-lock.txt
figures/: climsim_figures.html  climsim_figures.ipynb
grid_info/: ClimSim_low-res_grid-info.nc
metrics_and_figures/: ClimSim_metrics.ipynb  checkloading.ipynb  grid_info-to-npy.ipynb  ne4.val-stride-6.dp-over-g.npy  pressures_val_stride6_60lvls.npy  prototype.ipynb  reminder.txt  unit_tests.ipynb
norm_factors/: mli_std.nc
online_testing/: README.html  README.md
preprocessing/: README.md  check_overlap.ipynb  create_competition_data.ipynb  create_npy_data_splits.ipynb  create_weighting.ipynb  make_train_npy.ipynb  make_val_stride6.ipynb  npy_combine.py
tests/: conftest.py  test_data_utils.py  testing_data_utils_w_different_backends.py  testing_data_utils_with_backends.py  unit_tests.ipynb
variable_distributions/: README.md
website/: _config.yml  (+11 more)
(+1626 files in other folders)
